--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,17 +26,17 @@ dependencies {
     })
 
 
-    compile 'com.android.support:appcompat-v7:26.+'
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.0.1'
     compile 'com.android.support:support-v4:26.+'
-    compile 'com.shuhart.bubblepagerindicator:bubblepagerindicator:1.0.4'
-    compile 'com.romandanylyk:pageindicatorview:0.2.0@aar'
     compile 'com.android.support:support-annotations:25.3.0'
     compile 'com.android.support:support-core-ui:25.3.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.github.johnkil.android-robototextview:robototextview:2.5.0'
-    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.jakewharton:butterknife:8.8.1'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
@@ -46,5 +46,6 @@ apply plugin: 'kotlin-android'
 repositories {
     mavenCentral()
 }
-
 apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'com.jakewharton.butterknife'
