--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,8 @@ dependencies {
     })
 
     compile 'com.github.felixsoares:BottomNavygation:1.8.6'
-
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.0.1'
@@ -36,6 +37,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.github.johnkil.android-robototextview:robototextview:2.5.0'
     compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.jaredrummler:material-spinner:1.2.3'
+    compile 'com.roger.gifloadinglibrary:gifloadinglibrary:1.0.0'
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     testCompile 'junit:junit:4.12'
